<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/topNameTxtLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Topic"
        tools:endIconMode="clear_text"
        tools:helperTextTextColor="@color/red"
        >

        <EditText
            android:id="@+id/connName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/clientIDTxtLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        tools:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Client ID"
        tools:helperTextTextColor="@color/red"
        >
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Panel Type"
            android:paddingBottom="10dp"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Publish"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_subscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Subscribe"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_pubstr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Publish Stream"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.appcompat.widget.LinearLayoutCompat>