<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddConnectionActivity">

    <include
        android:id="@+id/conn_form"
        layout="@layout/connection_form"/>

    <Button
        android:id="@+id/saveConnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:onClick="saveConnection"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conn_form"/>

</androidx.constraintlayout.widget.ConstraintLayout>